# peeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Annotation_CellMembrane_Secreted.tsv  Annotation_Cyto_Mito_Nuc.tsv  annotation_cyto.tsv  annotation_surface.tsv  latest_ids.tsv  latest_ids_multiOrganisms.tsv  mass_spec_data.tsv  panther_organisms.tsv
peeling/: cellular_compartments.py  clipantherprocessor.py  cliprocessor.py  cliuniprotcommunicator.py  cliuserinputreader.py  main.py  pantherprocessor.py  processor.py  uniprotcommunicator.py  userinputreader.py  webpantherprocessor.py  webprocessor.py  webuniprotcommunicator.py  webuserinputreader.py
src/: main.py
src/2022-12-24_18-20-45.363538/: surface_proteins.tsv  user_input.txt
src/datamanagement/: cliuniprotcommunicator.py  cliuserinputreader.py  uniprotcommunicator.py  uniprotcommunicator_sync.py  userinputreader.py  webuniprotcommunicator.py  webuserinputreader.py
src/processor/: processor.py
src/processors/: clipantherprocessor.py  cliprocessor.py  pantherprocessor.py  processor.py  webpantherprocessor.py  webprocessor.py
test/: test.py
test/data/: mass_spec_data_1col.tsv  mass_spec_data_1row.tsv  mass_spec_data_allmissing.tsv  mass_spec_data_allones.tsv  mass_spec_data_empty_withheader.tsv  mass_spec_data_notnumber.tsv
