[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peeling"
version = "0.2.1"
authors = [
  { name="HHMI Janelia", email="peeling@janelia.hhmi.org" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "anyio==3.6.2",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "contourpy==1.0.6",
    "cycler==0.11.0",
    "fonttools==4.38.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==0.16.3",
    "httpx==0.23.1",
    "hyperframe==6.0.1",
    "idna==3.4",
    "joblib==1.2.0",
    "kiwisolver==1.4.4",
    "matplotlib==3.6.3",
    "numpy==1.23.4",
    "packaging==21.3",
    "pandas==1.5.1",
    "Pillow==9.3.0",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytz==2022.6",
    "requests==2.28.1",
    "rfc3986==1.5.0",
    "scikit-learn==1.1.3",
    "scipy==1.9.3",
    "seaborn==0.12.2",
    "six==1.16.0",
    "sklearn==0.0",
    "sniffio==1.3.0",
    "threadpoolctl==3.1.0",
    "urllib3==1.26.12"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["peeling"]  # ["*"] by default
exclude = []  # empty by default
namespaces = false  # true by default

[project.urls]
Homepage = "https://github.com/JaneliaSciComp/peeling"

[project.scripts]
peeling = 'peeling.main:main'
